# badgeware-simulator

./: .gitignore  .gitmodules  LICENSE  Makefile  Makefile.debug  README.md  debug  go  headless.sh  image.cpp  image.hpp  main.cpp  micropython.mk  modpicovector_bindings.c  picovector.cpp  picovector.hpp  rect.hpp  screenshots-to-video.py  span.hpp
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  frozen_content.c  micropython
build-debug/frozen_mpy/mip/: __init__.mpy
build-debug/frozen_mpy/requests/: __init__.mpy
build-debug/genhdr/: compressed.data.h  moduledefs.collected  moduledefs.collected.hash  mpversion.h  qstrdefs.collected.h  qstrdefs.collected.h.hash  qstrdefs.generated.h  qstrdefs.preprocessed.h
build-debug/genhdr/qstr/: __Users__jon__Library__CloudStorage__Dropbox__Development__pimoroni__badgeware__badgeware-simulator__lib__micropython__py__compile.c.qstr  __Users__jon__Library__CloudStorage__Dropbox__Development__pimoroni__badgeware__badgeware-simulator__src__modpicovector.cpp.qstr  __Users__jon__Library__CloudStorage__Dropbox__Development__pimoroni__badgeware__badgeware-simulator__src__modpicovector_bindings.c.qstr
docs/: Image.md  README.md  io.md  shapes.md
lib/cimgui/: cimgui-config.cmake
lib/jpegdec/: jpegdec-config.cmake
lib/sokol/: sokol-config.cmake  sokol.c  sokol.h  sokol_app.h  sokol_args.h  sokol_gfx.h  sokol_time.h
lib/sokol/util/: sokol_gl.h
micropython/: CMakeLists.txt  Makefile  badgeware.c  badgeware.h  headless.c  main.c  modsimulator.c  modsimulator.h  mpconfigport.cmake  mpconfigport.h  mpthreadport.c  test.py
micropython/build-old/: CMakeCache.txt  Makefile  cmake_install.cmake  frozen_content.c  micropython  test.py
micropython/build-old/frozen_mpy/asyncio/: core.mpy
micropython/build-old/genhdr/: moduledefs.h  mpversion.h  qstrdefs.collected.h  qstrdefs.collected.h.hash  qstrdefs.generated.h  qstrdefs.preprocessed.h
micropython/build-old/genhdr/module/: __Users__gadgetoid__Development__micropython-web__picovector__src__modpicovector_bindings.c.module
micropython/build-old/genhdr/qstr/: __Users__gadgetoid__Development__micropython-web__picovector__lib__micropython__extmod__modos.c.qstr  __Users__gadgetoid__Development__micropython-web__picovector__lib__micropython__extmod__modvfs.c.qstr  __Users__gadgetoid__Development__micropython-web__picovector__lib__micropython__py__objtype.c.qstr  __Users__gadgetoid__Development__micropython-web__picovector__lib__micropython__py__parse.c.qstr  __Users__gadgetoid__Development__micropython-web__picovector__lib__micropython__py__runtime.c.qstr  __Users__gadgetoid__Development__micropython-web__picovector__src__modpicovector.cpp.qstr  __Users__gadgetoid__Development__micropython-web__picovector__src__modpicovector_bindings.c.qstr
micropython/variants/: mpconfigvariant_common.h
micropython/variants/standard/: manifest.py  mpconfigvariant.h
modules/: machine.py  network.py  pcf85063a.py  powman.py  st7789.py
ports/sokol/: CMakeLists.txt  main.c  mphalport.h  test.py  unix_mphal.c
ports/sokol/variants/: mpconfigvariant_common.h
root/: badgeware.py  boot.py  contrib_data.json  debug.py  main.py  secrets.py  user_data.json
root-badgeware/: badgeware.py  main.py
root-badgeware/state/: badgepet.json  clock.json  flappy.json  hydrate.json
root-badgeware/system/: main.py
root-badgeware/system/apps/christmas/: __init__.py
root-badgeware/system/apps/clock/: __init__.py
root-badgeware/system/apps/menu/: app.py  ui.py
root-badgeware/system/apps/raycast/: __init__.py  map.py  player.py  texture.py
root-badgeware/system/apps/startup/: __init__.py
root-badgeware/system/apps/tomato/: __init__.py
root/demo/: __init__.py
root/lib/: __init__.py  fetch.py  wifi.py
root/system/: main.py  test.py
root/system/apps/badge/: __init__.py  ui.py  user.py
root/system/tests/: __init__.py  blur.py  circles.py  custom_shape.py  dda.py  dither.py  fonts.py  image_brush.py  intersect.py  line_clip.py  line_clipping.py  lines.py  pattern.py  pattern_brush.py  raw_image.py  raycast.py  rectangle_intersection.py  shape.py  sprites.py  text.py  transform_sprite.py  triangles copy.py  triangles.py  vector_shapes.py  vector_text.py  world.py
src/: blend.hpp  blit.hpp  brush.cpp  brush.hpp  color.cpp  color.hpp  font.cpp  font.hpp  image.cpp  image.hpp  main.cpp  matrix.hpp  micropython.cmake  mmallocator.hpp  modpicovector.cpp  modpicovector_bindings.c  picovector.config.hpp  picovector.cpp  picovector.hpp  pixel_font.cpp  pixel_font.hpp  point.hpp  primitive.cpp  primitive.hpp  rasteriser.cpp  rect.hpp  shape.cpp  shape.hpp  span.hpp  types.hpp
src/algorithms/: algorithms.hpp  dda.cpp
src/brushes/: color.cpp  image.cpp  pattern.cpp
src/image_filters/: blur.cpp
src/micropython/: algorithm.cpp  brush.cpp  brush.hpp  color.cpp  color.hpp  font.cpp  font.hpp  image.cpp  image.hpp  image_png.cpp  image_png.hpp  input.cpp  input.hpp  matrix.cpp  matrix.hpp  mp_helpers.hpp  mp_tracked_allocator.hpp  picovector.cpp  picovector.hpp  picovector_bindings.c  pixel_font.cpp  pixel_font.hpp  point.cpp  rect.cpp  shape.cpp  shape.hpp  types.h  vec2.cpp
test/: debug.py  demos.py  lib.py  main.py  mona.py  secrets.py  test.py  ui.py
test/assets/fonts/: sins.ppf  vest.ppf
test/badge/: __init__.py  contrib_data.json
test/flappy/: __init__.py  mona.py  obstacle.py
test/gallery/: __init__.py
test/menu/: __init__.py  icon.py  ui.py
test/monagotchi/: __init__.py  mona.py  ui.py
test/monagotchi/assets/: mona-icons.pxo
test/monapet/: __init__.py  mona.py  ui.py
test/msc/: __init__.py  disk_mode.py
test/performance/: __init__.py
test/performance/assets/: bacteria.ppf  ignore.ppf  nope.ppf  sins.ppf  vest.ppf
test/performance/tests/: blit.py  pixel_fonts.py  shapes.py  sprites.py  vector_fonts.py
test/quest/: __init__.py  beacon.py  ui.py
test/schedule/: __init__.py
test/schedule/assets/: MonaSans-Bold.af  MonaSans-Medium.af  MonaSans-Regular.af  MonaSans_SemiExpanded-Bold.af  sessions.json
test/sketch/: __init__.py  ui.py
test/startup/: __init__.py
(+15 files in other folders)
